2003-04-17  Richard Williamson   <rjw@apple.com>

        Drop down yet one more level to avoid intialization horkage.
        Call objc_getClass() instead of NSClassFromString().
        
        Reviewed by darin.

        * WebView.subproj/WebHTMLViewPrivate.m:
        (+[WebHTMLView load]):

2003-04-17  Darin Adler  <darin@apple.com>

        Reviewed by John.

        * WebView.subproj/WebDataProtocol.m: (+[NSURLRequest _webDataRequestURLForData:]):
        Register the WebDataProtocol here instead of doing it with a load method, since this
        is the bottleneck that must be used before that protocol is needed. It's good to have
        one less load method, and this may fix a problem reported by a Panther WebKit client
        on intrigue-dev too.

2003-04-16  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Darin

	Fixed call to load synchronous URL. Now conforms to new API
	which allows callers to access error object associated with 
	the load.

        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _loadItem:withLoadType:]):

2003-04-16  Chris Blumenberg  <cblu@apple.com>

	- Progressively load plain text in our text view.
	- Fixed: 3177603 - vCards appear in browser, not downloaded

        Reviewed by darin.

        * WebView.subproj/WebTextRepresentation.m:
        (-[WebTextRepresentation setDataSource:]): added FIXME about document source of RTF not working
        (-[WebTextRepresentation receivedData:withDataSource:]): feed data to the text view, progressively for plain text
        * WebView.subproj/WebTextView.m:
        (+[WebTextView unsupportedTextMIMETypes]): include text/directory, another vcard MIME type
        (-[WebTextView setDataSource:]): do 1-time attribute settings
        (-[WebTextView dataSourceUpdated:]): do nothing

2003-04-16  Ken Kocienda  <kocienda@apple.com>

        Reviewed by David

        Moved this NSURLProtocolClient implementor to API-approved
        interface.
